--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 
 
 # Default reviewers/codeowners for all code changes
-* @ToaaMahmoud @M0hamed-Khaled
+* @M0hamed-Khaled
 
 
 # Reviewer by email for html files
