--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 
 
 # Default reviewers/codeowners for all code changes
-* @M0hamed-Khaled
+* @M0hamed-Khaled @K7413dS433d @ToaaMahmoud @Tasneemhelmy @LEGENDARY-AHMED
 
 
 # Reviewer by email for html files
